--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "antd": "^5.19.3",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "flowbite": "^2.4.1",
@@ -21,8 +22,11 @@
     "react": "^18",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "router": "^1.3.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.6"
   },
